# tramontane

./: .env.example  .gitignore  .mcp.json  README.md  main.py  pyproject.toml
app/core/: banner.py  config.py  database.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
app/features/: api.py
app/providers/: ai_exceptions.py  ai_models.py  mistral_utils.py  registry.py
app/workers/: arq_app.py
docker/: Dockerfile  Dockerfile.web  docker-compose.override.yml  docker-compose.yml
docker/icecast/: entrypoint.sh  icecast.xml
docker/liquidsoap/: radio.liq
docker/nginx/: default.conf
music/: .gitignore
supabase/: config.toml
supabase/migrations/: 001_tracks.sql  002_track_tags.sql  003_rls.sql  004_updated_at_trigger.sql  005_hosts.sql  006_schedule_blocks.sql  007_rls_hosts_schedule.sql  008_radio_settings.sql  009_hosts_jsonb_refactor.sql  010_drop_voice_preview.sql  011_fix_search_path.sql  012_schedule_drop_block_type_add_description.sql  013_schedule_end_time.sql  014_hosts_voice_provider.sql  015_pgvector_tracks.sql  (+3 more)
tests/: conftest.py  test_ai_gateway.py  test_api_hosts.py  test_api_ingest.py  test_api_radio.py  test_api_schedule.py  test_content_pipeline.py  test_health.py  test_host_service.py  test_icecast_client.py  test_ingest_service.py  test_liquidsoap_client.py  test_metadata_service.py  test_migrations.py  test_prompt_builder.py  test_schedule_engine.py  test_schedule_service.py  test_settings_service.py  test_skills.py
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+137 files in other folders)
