[project]
name = "tramontane"
version = "0.1.0"
description = "Tramontane API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "supabase>=2.10.0",
    "asyncpg>=0.30.0",
    "pyjwt[crypto]>=2.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "arq>=0.26",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "ASYNC"]
ignore = [
    "B008",    # Depends() in function defaults — standard FastAPI DI pattern
    "RUF005",  # list concatenation vs unpacking — both readable, prefer explicit +
    "RUF006",  # asyncio.create_task without storing ref — fire-and-forget is intentional
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]
filterwarnings = [
    "error",
    "ignore::pydantic.warnings.PydanticDeprecatedSince212",
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
